testsuite/bsc.interra/messages/EUnknownSize/EUnknownSize.bs.bsc-out.expected
checking package dependencies
compiling EUnknownSize.bs
Error: "EUnknownSize.bs", line 48, column 41: (T0035)
  Bit vector of unknown size introduced near this location.
  Please remove unnecessary extensions, truncations and concatenations and/or
  provide more type information to resolve this ambiguity.
